--- a/Vista/Vistas/asignarMateriasDocente.resx
+++ b/Vista/Vistas/asignarMateriasDocente.resx
@@ -117,4 +117,28 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox1_cerrar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAGYktHRAD/AP8A/6C9p5MAAAPwSURBVGhD7ZlLSBVRGMftZRHRgx60KKh2WWRlUS2ku6mwaKl4
+        XyIF0sMIijZSdGlTRKWbNgm1CIIwMgzsbVRgEbYoatGmWoRBqCnd6GWP3yfnXsbjmXFe994I//DDmXu+
+        1zln5syZsWhM/6MqKyuLk8nkvFgstqS6unpRbW3tTNX0b4oiVyUSiQMUfAVex+Pxn/BHox+ewFls4jU1
+        NbOVe2FUV1c3lWL2wgvQi3XDd2ih4+UqZH7E5TGBpPvho1ZQEB4yK2UqRe5EohJ4ZkkcJoN04nRFRcVk
+        lS5cETxJki9a0lzQJTe+ShuOKP4wgX9riXJJNzlXqvTBRKBjhgT5YID7rFSV4U8EiUE+R17nje/lVtZ2
+        AnzVAhaCDln5VFnuJA44dmmBCgaX8W5VmjvhJA8oY7AC0cegzlXlOQvDaTj0aAEKDrPQpEp0Fsb7dGc7
+        CNrMShHluE9vGw18b+O7jeP3epsNaVc3NEGfG5yNYFslPhRTxrmXTtxghzpFfDl+oLXZQr568bEVW+Dl
+        JkcHeih+6IHjoRPtmeLxOWpod6JT/GxFDw8ZnEajn46vE3/+LuX8g9aehYJb2cVOElvOT+ntLvgVjUbn
+        iL9RdKDN4OQGNzMRZOSz0IHtEsMoDN7qDh5wmomrAUc+C4PcIHFGiOWzGINB3cEjPfIEl3gkWs15L7Rn
+        tsj8lrLY+oLZOy+xRkgeFCYHH2Q7ITMRZvGKaxJvhEi22GDsFxn5EhVaim/Q2n3DDNxTYYeLxgW6cQCu
+        yyWpQmc2hmE93W+qsMMlnz4Mxn7okBd+icnIH2Fm18gxq8cG2gY0Wz+0SDyTxtH4WTP2SmbkJVaj+i1N
+        8RslQUgz0SixjKLR9xaa0W4zFJ8h2wl5XnAepBO7JI5RNJ7TjF0hN1bmsuH8uN6u+ARrxSbg5TQUwyhG
+        scrg4Ih15OlIk8nGQhr7iOTyORO9qVRqvPgbRdBZ8M3gaIf1hj1haDeRnQn+roe0+t0NF8XPURi1aE62
+        0Nmt4uOh+AzWTtyy/O4I+baIj6MoptzkbEM3dGq/uUVG/i6YPgSbeOV4+ViF8X3NueAwsFFV3uhilViG
+        0w89SAHpUKW5F06Btr1hIYsKA7pCleVekUhkItP2yBQ0n9CBnaok7+LRv5Agbr8ahA7FN6tS/Eumj2B5
+        /07E7LfJVaDKCCb1ivhOT5JDLmReQUMT24UZBL6sJQob2WrUqJQ5kew094D8x9FUQBAe+1pt/IiXn/mM
+        1BmSBn1/EF5CwvVTNkyxSsyiI/UU8BS8fNGQrfQlfDcVpHCTKGg6bIaDsvxBK8d3QDZrcu+chB0UXcr9
+        5O0fFmMaU65UVPQXqen2hvlHeYYAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
